Fix IE problem with "pointer-events: none;"
In IE11. If you click on an invisible "select", a list is displayed.

--- a/assets/stylesheets/issue_dynamic_edit.css
+++ b/assets/stylesheets/issue_dynamic_edit.css
@@ -86,8 +86,13 @@ body.controller-issues.action-show div.issue.details .btn-primary.validate {
 	background: #27ae60;
 }
 
+body.controller-issues.action-show .edited .dynamicEdit select {
+        display: inline-block;
+}
+
 body.controller-issues.action-show .dynamicEdit select {
 	border:none;
+	display:none;
     background-image:none;
     background-color:transparent;
     -webkit-box-shadow: none;
